# edit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WORKSPACE.bazel  cargo-bazel-lock.json
.github/workflows/: ci.yaml
pocs/hello_world/: BUILD.bazel
tools/bazel/edit/: deps.bzl  extra_deps.bzl
