load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

rust_binary(
    name = "hello_world",
    srcs = ["src/main.rs"],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:bumpalo",
        "@crate_index//:cacao",
        "@crate_index//:cocoa",
        "@crate_index//:fontdue",
        "@crate_index//:imgui",
        "@crate_index//:libc",
        "@crate_index//:metal",
        "@crate_index//:objc",
        "@crate_index//:objc_id",
        "@crate_index//:png",
        "@crate_index//:rand",
        "@crate_index//:rusttype",
        "@crate_index//:serde",
        "@crate_index//:thiserror",
        "@crate_index//:toml",
        "@crate_index//:uuid",
        "@crate_index//:winit",
        "@crate_index//:yaml-rust",
    ],
)
